--- a/data.yaml
+++ b/data.yaml
@@ -13,11 +13,11 @@ dgm:
 gdc:
   text: GDC CA
   start: March 2018
-  end: March 2019
+  end: NOW
   height: -1
 
 reddit:
-  text: Subreddit
+  text: Community
   start: May 2018
   end: NOW
   height: -2
@@ -72,6 +72,6 @@ ludeon:
 
 nope:
   text: Nope
-  start: July 2018
+  start: July 2019
   end: NOW
   height: 1
